Deleted target directory as it's not need and shouldn't be uploaded to the hub. Fixed issue causing login page to not show up.
Signed-off-by: mosh-exe <mohammeds@mun.ca>