@@ -41,6 +41,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
+                    <options>--add-opens=java.base/java.lang.reflect=com.jfoenix</options>
                     <release>${maven.compiler.release}</release>
                     <jlinkImageName>UCalendar</jlinkImageName>
                     <launcher>launcher</launcher>
